{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 164,
  "lineage": "48f7c0f6-6d15-0706-b6e9-83b081d7fd61",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bfa12459eeac3fce",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06b20e6edf8e2c17a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-177-57.compute-1.amazonaws.com",
            "public_ip": "54.237.177.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.resources.aws_internet_gateway.MyIGW",
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "module.my_ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:946481859757:instance/i-0a7797c46168963b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7797c46168963b8",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010ac101bdb39822b",
            "private_dns": "ip-172-31-89-37.ec2.internal",
            "private_ip": "172.31.89.37",
            "public_dns": "ec2-34-201-77-241.compute-1.amazonaws.com",
            "public_ip": "34.201.77.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f6b1fe8594bbd4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6606bf47",
            "tags": {
              "Name": "my_dev_EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-6135fd52"
            ]
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_prod_ec2",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:946481859757:instance/i-056f59b926cb6e40c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056f59b926cb6e40c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da4a1456cd9f5f7c",
            "private_dns": "ip-172-31-30-58.ec2.internal",
            "private_ip": "172.31.30.58",
            "public_dns": "ec2-54-173-16-157.compute-1.amazonaws.com",
            "public_ip": "54.173.16.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0927c9933a21de9f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4090d20d",
            "tags": {
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-6135fd52"
            ]
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946481859757:internet-gateway/igw-0ca9c230d413cafc0",
            "id": "igw-0ca9c230d413cafc0",
            "owner_id": "946481859757",
            "tags": {
              "Creation-Time": "",
              "region": "us-east-1",
              "resource-name": "My Custom IGW"
            },
            "vpc_id": "vpc-0fe7250483981f8f1"
          },
          "dependencies": [
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.resources.provider.aws",
      "instances": []
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca9c230d413cafc0",
            "id": "r-rtb-04db1635511776a841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04db1635511776a84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.resources.aws_internet_gateway.MyIGW",
            "module.resources.aws_route_table.public",
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-015e12337db362345",
            "owner_id": "946481859757",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0fe7250483981f8f1"
          },
          "dependencies": [
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04db1635511776a84",
            "owner_id": "946481859757",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "",
              "Name": "-public-route-table"
            },
            "vpc_id": "vpc-0fe7250483981f8f1"
          },
          "dependencies": [
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.resources.provider.aws"
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.resources.provider.aws"
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946481859757:security-group/sg-02a4d6fb6c803b265",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a4d6fb6c803b265",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "-default-sg",
            "name_prefix": "",
            "owner_id": "946481859757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creation-Time": "",
              "environment": "",
              "region": "us-east-1",
              "resource-name": "My Custom SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe7250483981f8f1"
          },
          "dependencies": [
            "module.resources.aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "module.resources.provider.aws"
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.resources.provider.aws"
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "module.resources.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:946481859757:vpc/vpc-0fe7250483981f8f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0935c8724d0eaf57f",
            "default_route_table_id": "rtb-0564b624811d24748",
            "default_security_group_id": "sg-087631b96623c8bab",
            "dhcp_options_id": "dopt-b7ee86cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe7250483981f8f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0564b624811d24748",
            "owner_id": "946481859757",
            "tags": {
              "Creation-Time": "",
              "region": "us-east-1",
              "resource-name": "My Custom VPC"
            }
          }
        }
      ]
    }
  ]
}